fixed the blurb alignment in the parent container

--- a/src/musician/sections/SoundDesign/SoundDesignStyles.module.css
+++ b/src/musician/sections/SoundDesign/SoundDesignStyles.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	align-items: center;
 	min-height: 500px;
 	height: 100dvh;
 	justify-content: center;
@@ -24,6 +25,10 @@
 		z-index: 1;
 
 		a {
+			display: flex;
+			flex-direction: column;
+			text-align: center;
+			align-items: center;
 			margin: 0;
 			transition: transform 200ms ease-in-out;
 
@@ -41,7 +46,9 @@
 	margin-top: 10px;
 	max-width: 24ch;
 	text-align: center;
-	justify-self: center;
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
 }
 @media (width <= 500px) {
 	.container {
